--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/code.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -p tsconfig.json"
+    "build": "mkdir -p dist && tsc -p tsconfig.json && cp src/ui/ui.html dist/ui.html"
   },
   "keywords": [],
   "author": "",
