--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "jsx": "react",
     "module": "esnext",
     "moduleResolution": "node",
-    "lib": ["es6"],
+    "lib": ["es2017", "dom"],
     "outDir": "dist",
     "rootDir": "src",
     "typeRoots": ["./node_modules/@types", "./node_modules/@figma"],
