Update Readme and fix issues for publishing to Figma community

--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,8 @@
   "id": "1510096136362846988",
   "api": "1.0.0",
   "main": "dist/code.js",
+  "networkAccess": { "allowedDomains": ["none"] },
+  "documentAccess": "dynamic-page",
   "editorType": ["figma"],
   "menu": [
     {
