--- a/manifest.json
+++ b/manifest.json
@@ -60,8 +60,8 @@
       "command": "s0"
     },
     {
-      "name": "f.1 - Add Default Fill",
-      "command": "fill1"
+      "name": "f.w - Add White Fill",
+      "command": "fillwhite"
     },
     {
       "name": "f.0 - Remove All Fills",
