--- a/manifest.json
+++ b/manifest.json
@@ -9,59 +9,59 @@
   "menu": [
     {
       "name": "w.h - Set Width to Hug",
-      "command": "wh"
+      "command": "widthHug"
     },
     {
       "name": "h.h - Set Height to Hug",
-      "command": "hh"
+      "command": "heightHug"
     },
     {
       "name": "w.f - Set Width to Fill",
-      "command": "wf"
+      "command": "widthFill"
     },
     {
       "name": "h.f - Set Height to Fill",
-      "command": "hf"
+      "command": "heightFill"
     },
     {
       "name": "p.0 - Set All Padding to 0",
-      "command": "p0"
+      "command": "padding0"
     },
     {
       "name": "p.16 - Set All Padding to 16",
-      "command": "p16"
+      "command": "padding16"
     },
     {
       "name": "al.. - Set Auto Layout Alignment",
-      "command": "al.."
+      "command": "setAutolayout"
     },
     {
       "name": "al.h - Set Auto Layout to Horizontal",
-      "command": "al.h"
+      "command": "aLayoutHorizontal"
     },
     {
       "name": "al.v - Set Auto Layout to Vertical",
-      "command": "al.v"
+      "command": "aLayoutVertical"
     },
     {
       "name": "br.8 - Set Border Radius to 8px",
-      "command": "br8"
+      "command": "borderRadius8"
     },
     {
       "name": "br.0 - Set Border Radius to 0px",
-      "command": "br0"
+      "command": "borderRadius0"
     },
     {
       "name": "s.1 - Set Stroke to 1",
-      "command": "s1"
+      "command": "stroke1"
     },
     {
       "name": "s.0 - Set Stroke to 0",
-      "command": "s0"
+      "command": "stroke0"
     },
     {
       "name": "f.w - Add White Fill",
-      "command": "fillwhite"
+      "command": "fillWhite"
     },
     {
       "name": "f.0 - Remove All Fills",
@@ -113,11 +113,11 @@
     },
     {
       "name": "ls.. - Set Text Letter Spacing",
-      "command": "ls.."
+      "command": "lineSpacing"
     },
     {
       "name": "t.s - Set Text Size",
-      "command": "t.s"
+      "command": "textSize"
     }
   ],
   "ui": "dist/auto-alignment-control.html"
